Add hover trail functionality and begin grid refresh and new grid from user prompt functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main>
+        <button class="btn" id="new-grid">New Grid</button>
         <div class="container" id="grid-container">
            
         </div>
