Add README description of project goals and descriptive comments in JS code.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <main>
         <button class="btn" id="new-grid">New Grid</button>
+        <div class="modal" id="prompt">
+            div.modal
+        </div>
         <div class="container" id="grid-container">
            
         </div>
