Add dynamic grid generation

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <main>
-        <button class="btn" id="new-grid">New Grid</button>
+        <button class="btn" id="new-grid-btn">New Grid</button>
         <div class="modal" id="prompt">
-            div.modal
+            <div class="modal-content">
+
+            </div>
         </div>
         <div class="container" id="grid-container">
            
