Add transition effect to bg-color change. Add current grid size DOM element. Update README to reflect current progress status.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <main>
-        <button class="btn" id="new-grid-btn">New Grid</button>
+        <div class="info">
+            <button class="btn" id="new-grid-btn">New Grid</button>
+            <div class="current-grid-size">16 x 16</div>
         </div>
         <div class="container" id="grid-container">
            
